Fixed alignment of small (collapsed) articles

--- a/css/_post.scss
+++ b/css/_post.scss
@@ -9,6 +9,8 @@ article {
 	margin-bottom: 2rem;
 
 	&.small {
+		@extend %block-level;
+
 		&:before {
 			content: "— ";
 			color: lighten($grey, 45%);
